[package]
author = ["Will S. Medrano <will.s.medrano@gmail.com>"]
description = "livi is a library for hosting LV2 plugins."
edition = "2018"
keywords = ["realtime", "audio", "lv2", "plugins", "music"]
license = "MIT"
name = "livi"
readme = "README.md"
repository = "https://github.com/wmedrano/livi-rs"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lilv = "0.0.6"
log = "0.4"
lv2-sys = "2"
lv2_raw = "0.2"

[dev-dependencies]
env_logger = "0.9"
jack = "0.7"
structopt = "0.3"
