[package]
authors = ["Will S. Medrano <will.s.medrano@gmail.com>"]
description = "livi is a library for hosting LV2 plugins."
documentation = "https://docs.rs/livi"
edition = "2018"
keywords = ["realtime", "audio", "lv2", "plugins", "music"]
license = "MIT"
name = "livi"
readme = "README.md"
repository = "https://github.com/wmedrano/livi-rs"
version = "0.7.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lilv = "0.2"
log = "0.4"
lv2-sys = "2"
lv2_raw = "0.2"
ringbuf = "0.3"

[dev-dependencies]
env_logger = "0.10"
jack = {version = "0.11"}
lazy_static = "1.4"
structopt = "0.3"
tempfile = "3.6"
wav = "1.0"
